--- a/index.html
+++ b/index.html
@@ -133,93 +133,93 @@
                 </div>
                 <div class="carousel">
                     <div class="reviews d-flex">
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-1.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”The Andy project management software allows me to have greater connection with different departments. For example, I can interact with engineers directly and establish working relationships—and that collaboration has been extremely valuable.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-2.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Kyler Rose</p>
+                                    <p class="black-text-2 fs-14--lh-14">Marketing Services Manager</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”In government we have no shortage of challenges, but there are a lot of things we can control. There are processes that we can improve upon and refine. Tools like Andy are what allow us to do better. We have a lot of challenges here at the White House. But there are things we can do to get stuff done. Tools like Andy help us work together better.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-3.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Mayor Jorge Elorza</p>
+                                    <p class="black-text-2 fs-14--lh-14">City of Providence</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”New employees can look at the Creative Requests board, and immediately understand what the entire marketing team is working on without having to ask. The Creative Requests board keeps new employees in the loop about all of the company's marketing campaigns.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-4.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Tulio Joop</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-1.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-1.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
-                                <img src="avatar-1.svg" alt="">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
+                            <div class="review-author d-flex align-center">
+                                <img src="avatar-1.png" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
+                            <div class="review-author d-flex align-center">
                                 <img src="avatar-1.svg" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="review-card d-flex flex-column br-20">
-                            <p>”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
-                            <div class="d-flex">
+                        <div class="review-card d-flex flex-column space-between br-20">
+                            <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
+                            <div class="review-author d-flex align-center">
                                 <img src="avatar-1.svg" alt="">
                                 <div>
-                                    <p>Sagor Ahmad</p>
-                                    <p>Inbound Marketing Team.</p>
+                                    <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
+                                    <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
                                 </div>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                 <div class="text-center">
                     <h2 class="fw-600">Pricing</h2>
                     <div id="tariffs" class="row">
-                        <div class="fs-14--lh-14 col active">Bill yearly <span class="fs-10--lh-10">-40%</span></div>
+                        <div class="fs-14--lh-14 col active">Bill yearly <span class="fs-10--lh-10 black-text-3">-40%</span></div>
                         <div class="fs-14--lh-14 col">Bill monthly</div>
                     </div>
                 </div>
