change class names

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
             </section>
 
-            <section class="third-gradient d-flex align-center space-between flex-wrap br-20 mb-140">
+            <section class="blue-gradient d-flex align-center space-between flex-wrap br-20 mb-140">
                 <div class="steps">
                     <h2 class="white-text-1 fw-600">How App Works?</h2>
                     <div class="step d-flex flex-wrap">
