moved images to a separate folder

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="jumbotron">
             <nav class="d-flex align-center column-mobile">
                 <div class="d-flex space-between">
-                    <a class="logo" href="#home"><img src="logo.svg" alt=""></a>
-                    <img id="button" class="menu-button" src="menu.svg" alt="">
+                    <a class="logo" href="#home"><img src="./public/logo.svg" alt=""></a>
+                    <img id="button" class="menu-button" src="./public/menu.svg" alt="">
                 </div>
                 <ul class="dropdown-content animate__animated">
                     <li><a class="white-text-1 fs-16--lh-16" href="#home">Home</a></li>
@@ -35,21 +35,21 @@
             <div class="main-text text-center mx-auto">
                 <h1 class="fw-600 white-text-1">Manage your daily task today with simple</h1>
                 <p class="white-text-2">Task-Andy is built for every member if your software team to plan,<br>track, and release great software.</p>
-                <div class="download-links flex-wrap justify-center"><a href="https://www.apple.com/app-store/" target="_blank"><img src="app-store.svg" alt=""></a><!----><a href="https://play.google.com/store/apps" target="_blank"><img src="google-play.svg" alt=""></a><!----></div></div>
-            <img class="main-image mx-auto mb-140" src="phones.svg" alt="">
+                <div class="download-links flex-wrap justify-center"><a href="https://www.apple.com/app-store/" target="_blank"><img src="./public/app-store.svg" alt=""></a><!----><a href="https://play.google.com/store/apps" target="_blank"><img src="./public/google-play.svg" alt=""></a><!----></div></div>
+            <img class="main-image mx-auto mb-140" src="./public/phones.svg" alt="">
             <p class="text-center mx-auto black-text-2 mb-24">Thousands of teams around the world are building software with Shortcut.</p>
             <div class="text-center mb-140">
-                <img src="scale.svg" alt="">
-                <img src="fullstory.svg" alt="">
-                <img src="maven.svg" alt="">
-                <img src="make-space.svg" alt="">
-                <img src="glossier.svg" alt="">
-                <img src="cabify.svg" alt="">
+                <img src="./public/scale.svg" alt="">
+                <img src="./public/fullstory.svg" alt="">
+                <img src="./public/maven.svg" alt="">
+                <img src="./public/make-space.svg" alt="">
+                <img src="./public/glossier.svg" alt="">
+                <img src="./public/cabify.svg" alt="">
             </div>
 
             <section class="grey mb-140 bg-grey br-20">
                 <div class="d-flex space-between align-center flex-wrap justify-center-mobile mb-130">
-                    <img class="mobile-order-2" src="iphone-1.svg" alt="">
+                    <img class="mobile-order-2" src="./public/iphone-1.svg" alt="">
                     <div class="headline">
                         <h2>Customize your tasks for any project.</h2>
                         <p class="black-text-2">Use over apps to customize your tasks for any of your work needs. Save time with task.</p>
@@ -69,7 +69,7 @@
                             <li class="black-text-2 fs-14--lh-14 fw-500">Task Templates</li>
                         </ul>
                     </div>
-                    <img src="iphone-2.svg" alt="">
+                    <img src="./public/iphone-2.svg" alt="">
                 </div>
             </section>
 
@@ -98,7 +98,7 @@
                         </div>
                     </div>
                 </div>
-                <video class="br-20" controls poster="video.svg">
+                <video class="br-20" controls poster="./public/video.svg">
                     <source src="" type="video/mp4">
                     Sorry, your browser doesn't support embedded videos.
                 </video>
@@ -107,18 +107,18 @@
             <section class="grey-2 bg-grey br-20 text-center">
                 <h2 class="fw-500"><span class="yellow-text">See your work,</span> your way.</h2>
                 <p class="black-text-2 mx-auto">You can manage tasks on a List, set up a workflow on a Board, and turn due dates into reminders on a calendar.</p>
-                <img class="max-width-100" src="desktop-and-phone.svg" alt="">
+                <img class="max-width-100" src="./public/desktop-and-phone.svg" alt="">
             </section>
             <section class="cards d-flex flex-wrap justify-center mb-140">
                 <div class="grey-card bg-grey br-20 text-center d-flex flex-column">
-                    <img class="max-width-100 mx-auto mobile-order-2" src="iphone-3.svg" alt="">
+                    <img class="max-width-100 mx-auto mobile-order-2" src="./public/iphone-3.svg" alt="">
                     <h2 class="fw-500 mx-auto">Simplify your work on <span class="green-text">your project.</span></h2>
                     <p class="black-text-2 mx-auto">Take control of your team's workload with project management that is flexible and easy to use.</p>
                 </div>
                 <div class="grey-card bg-grey br-20 text-center d-flex flex-column">
                     <h2 class="fw-500 mx-auto">Connect with your friends <span class="blue-text">in Chat.</span></h2>
                     <p class="black-text-2 mx-auto">Collaborate effectively with real-time chat. Tag teammates, assign comments for action items, and link tasks to get more done together.</p>
-                    <img class="max-width-100 mx-auto" src="iphone-4.svg" alt="">
+                    <img class="max-width-100 mx-auto" src="./public/iphone-4.svg" alt="">
                 </div>
             </section>
         </div>
@@ -127,7 +127,7 @@
                 <div class="header d-flex space-between align-center flex-wrap">
                     <h2 class="fw-600 white-text-1">Trusted by millions of customers.</h2>
                     <div class="trustpilot d-flex flex-column">
-                        <img src="trustpilot.png" alt="">
+                        <img src="./public/trustpilot.png" alt="">
                         <p class="fs-16--lh-16 white-text-2 text-end">4.5/5 (25 avis)</p>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-1.png" alt="">
+                                <img src="./public/avatar-1.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -146,7 +146,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”The Andy project management software allows me to have greater connection with different departments. For example, I can interact with engineers directly and establish working relationships—and that collaboration has been extremely valuable.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-2.png" alt="">
+                                <img src="./public/avatar-2.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Kyler Rose</p>
                                     <p class="black-text-2 fs-14--lh-14">Marketing Services Manager</p>
@@ -156,7 +156,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”In government we have no shortage of challenges, but there are a lot of things we can control. There are processes that we can improve upon and refine. Tools like Andy are what allow us to do better. We have a lot of challenges here at the White House. But there are things we can do to get stuff done. Tools like Andy help us work together better.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-3.png" alt="">
+                                <img src="./public/avatar-3.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Mayor Jorge Elorza</p>
                                     <p class="black-text-2 fs-14--lh-14">City of Providence</p>
@@ -166,7 +166,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”New employees can look at the Creative Requests board, and immediately understand what the entire marketing team is working on without having to ask. The Creative Requests board keeps new employees in the loop about all of the company's marketing campaigns.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-4.png" alt="">
+                                <img src="./public/avatar-4.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Tulio Joop</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -176,7 +176,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-1.png" alt="">
+                                <img src="./public/avatar-1.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -186,7 +186,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-1.png" alt="">
+                                <img src="./public/avatar-1.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -196,7 +196,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-1.png" alt="">
+                                <img src="./public/avatar-1.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -206,7 +206,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-1.svg" alt="">
+                                <img src="./public/avatar-1.svg" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -216,7 +216,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="avatar-1.svg" alt="">
+                                <img src="./public/avatar-1.svg" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -300,19 +300,19 @@
             </section>
 
             <section class="download bg-yellow white-text-1 br-20 text-center mb-140">
-                <img src="sun.svg" alt="">
+                <img src="./public/sun.svg" alt="">
                 <h2 class="fw-600 mx-auto">Download Andy to get started</h2>
                 <p class="white-text-2">Available on Android and iOS.</p>
                 <div class="download-links flex-wrap justify-center align-center">
-                    <a href="https://www.apple.com/app-store/" target="_blank"><img src="app-store.svg" alt=""></a><!----><a href="https://play.google.com/store/apps" target="_blank"><img src="google-play.svg" alt=""></a><!----></div>
-                <img src="download-arrows.svg">
+                    <a href="https://www.apple.com/app-store/" target="_blank"><img src="./public/app-store.svg" alt=""></a><!----><a href="https://play.google.com/store/apps" target="_blank"><img src="./public/google-play.svg" alt=""></a><!----></div>
+                <img src="./public/download-arrows.svg">
             </section>
         </div>
 
         <footer class="jumbotron text-center-mobile">
             <div class="d-flex column-mobile space-between">
                 <div class="footer-header">
-                    <img class="logo-footer" src="logo-footer.svg" alt="">
+                    <img class="logo-footer" src="./public/logo-footer.svg" alt="">
                     <p class="black-text-2">This membership will help you plan and execute a variety of projects.</p>
                 </div>
                 <div class="links d-flex">
@@ -353,9 +353,9 @@
             <div class="last-line d-flex space-between">
                 <p class="black-text-2 fs-16--lh-16">©2022 Made in uihut.com</p>
                 <div class="socail-media">
-                    <a href="#"><img src="facebook.svg" alt=""></a>
-                    <a href="#"><img src="twitter.svg" alt=""></a>
-                    <a href="#"><img src="linkedin.svg" alt=""></a>
+                    <a href="#"><img src="./public/facebook.svg" alt=""></a>
+                    <a href="#"><img src="./public/twitter.svg" alt=""></a>
+                    <a href="#"><img src="./public/linkedin.svg" alt=""></a>
                 </div>
                 <div class="d-flex column-mobile" style="column-gap: 40px; row-gap: 10px;">
                     <a class="black-text-2 fs-16--lh-16" href="#">Privacy Policy</a>
