--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                     </div>
                 </div>
             </div>
-            <div class="last-line d-flex space-between">
+            <div class="last-line d-flex space-between align-center">
                 <p class="black-text-2 fs-16--lh-16">©2022 Made in uihut.com</p>
                 <div class="socail-media">
                     <a href="#"><img src="./public/facebook.svg" alt=""></a>
