--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="./public/avatar-1.svg" alt="">
+                                <img src="./public/avatar-1.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
@@ -216,7 +216,7 @@
                         <div class="review-card d-flex flex-column space-between br-20">
                             <p class="black-text-2">”Andy has become such an integral part of our work! By setting up weekly Sprints to discuss and organize our work, we can easily collaborate with other departments without spending hours at a time in meetings.”</p>
                             <div class="review-author d-flex align-center">
-                                <img src="./public/avatar-1.svg" alt="">
+                                <img src="./public/avatar-1.png" alt="">
                                 <div>
                                     <p class="fs-22--lh-24 fw-500">Sagor Ahmad</p>
                                     <p class="black-text-2 fs-14--lh-14">Inbound Marketing Team</p>
